@@ -1,3 +1,9 @@
+2007-03-01  Akim Demaille  <demaille@gostai.com>
+
+	Clarify/simplify the KERNEL_*FLAGS
+	* urbi-dirs.m4: More documentation.
+	For the core, do not define SDK_*FLAGS, define KERNEL_*FLAGS.
+
 2007-03-01  Thomas Moulard  <thomas.moulard@lrde.epita.fr>
 
 	Simplify urbi-with-openhrp.
